   HBASE-6283  [region_mover.rb] Add option to exclude list of hosts on unload instead of just assuming the source node
   HBASE-6382  Upgrade Jersey to 1.8 to match Hadoop 1 and 2 (David S. Wang)
   HBASE-6379  [0.90 branch] Backport HBASE-6334 to 0.90 (TestImprovement for TestHRegion.testWritesWhileGetting) (Gregory Chanan)

  NEW FEATURE
   HBASE-5128  [uber hbck] Online automated repair of table integrity and region consistency problems
   HBASE-5599  [hbck] handle NO_VERSION_FILE and SHOULD_NOT_BE_DEPLOYED inconsistencies (fulin wang)
   HBASE-5719  Enhance hbck to sideline overlapped mega regions (Jimmy Xiang)

Release 0.90.6 - March 16, 2012
  INCOMPATIBLE CHANGES
   HBASE-5228  [REST] Rip out "transform" feature

  BUG FIXES
   HBASE-5008  The clusters can't provide services because Region can't flush
               (Gaojinchao)
   HBASE-5020  MetaReader#fullScan doesn't stop scanning when vistor returns
               false in 0.90 version (Chunhui Shen)
   HBASE-4893  HConnectionImplementation is closed but not deleted (Mubarak)
   HBASE-4970  Add a parameter so that keepAliveTime of Htable thread pool can be changed (gaojinchao)
   HBASE-5060  HBase client is blocked forever (Jinchao)
   HBASE-5073  Registered listeners not getting removed leading to memory leak in HBaseAdmin
               (Ramkrishna)
   HBASE-5009  Failure of creating split dir if it already exists prevents splits from happening further
   HBASE-5041  Major compaction on non existing table does not throw error (Shrijeet)
   HBASE-5088  A concurrency issue on SoftValueSortedMap (Jieshan Bean and Lars H)
   HBASE-5156  Backport HBASE-4899 - Region would be assigned twice easily with 
               continually killing server and moving region in testing environment(Ram)
   HBASE-5158  Backport HBASE-4878 - Master crash when splitting hlog may cause data loss (Ram)
   HBASE-5168  Backport HBASE-5100 - Rollback of split could cause closed region to be opened again(Ram)